--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -4,7 +4,7 @@ version = VERSION_NAME
 group = GROUP
 
 android {
-    compileSdkVersion rootProject.ext.compileSdkVersion
+    compileSdkVersion 27
     defaultConfig {
         minSdkVersion 9
         targetSdkVersion 21
@@ -19,5 +19,5 @@ android {
 }
 
 dependencies {
-    implementation  project(':library')
+    implementation project(':library')
 }
