--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ buildscript {
     repositories {
         mavenCentral()
         google()
+        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.3'
@@ -17,5 +18,6 @@ allprojects {
     repositories {
         mavenCentral()
         google()
+        jcenter()
     }
 }
